--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,3 +5,9 @@ body{
     align-items: center;
     justify-content: center;
 }
+
+#tooltip{
+    display:inline-block;
+    position:absolute;
+    background: green;
+}
