--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,78 @@
 body{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     display:flex;
-    background: yellow;
+    background: rgb(128, 128, 0);
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.heading{
+color: rgb(220, 220, 220);
+margin: 10px;
+font-size:1.5rem;
+}
+
+.sub-heading{
+    color: rgb(200, 200, 200);
+margin-bottom:15px;
+}
+
+.footer{
+    font-size: 0.8rem;
+    margin:10px;
+    color:white;
+    
+}
+
+#x-axis, #y-axis{
+    stroke-dasharray: 1 1;
+}
+
+.scatter-graph{
+    background: rgb(220, 220, 220);
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px;
+}
+
 #tooltip{
     display:inline-block;
+    color:white;
+
+    font-size: 12px;
     position:absolute;
+    background: rgb(136, 136, 0);
+    width:100px;
+    word-wrap: normal;
+    overflow-wrap: normal;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px;
+}
+
+#legend{
+    font-size: 12px;
+    display:inline-block;
+    padding:5px;
+    position: absolute;
+    background: rgb(201, 201, 201);
+    width: 200px;
+    top:120px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 20px;
+
+}
+
+.box-1{
+    float:left;
+    margin:3px 10px 5px 5px;
+    width:10px;
+    height:10px;
     background: green;
+}
+.box-2{
+    float:left;
+    width:10px;
+    margin:3px 10px 5px 5px;
+    height:10px;
+    background:red;
 }
